--- a/pom.xml
+++ b/pom.xml
@@ -50,4 +50,41 @@
 
 
 </dependencies>
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+
+					<configuration>
+						<systemPropertyVariables>
+							<userName>${DuserName}</userName>
+							<password>${Dpassword}</password>
+							<url>${Durl}</url>
+							<browser>${Dbrowser}</browser>
+						</systemPropertyVariables>
+					</configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+
+					</suiteXmlFiles>
+
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
