--- a/src/main/java/com/oracle/tr/config/OR.properties
+++ b/src/main/java/com/oracle/tr/config/OR.properties
@@ -1,6 +1,6 @@
 
-browser=chrome
-url=http://automationpractice.com/index.php
-tirerack_url=https://www.tirerack.com/content/tirerack/desktop/en/homepage.html
+browser=firefox
+#url=http://automationpractice.com/index.php
+url=https://www.tirerack.com/content/tirerack/desktop/en/homepage.html
 userName=
 Password=
