--- a/log4j.properties
+++ b/log4j.properties
@@ -5,6 +5,7 @@ log4j.rootLogger = INFO, FILE,stdout
 # Define the file appender
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.File=automation.out
+log4j.appender.FILE.Append=true
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.file.MaxFileSize=4MB
 log4j.appender.file.MaxBackupIndex=9
