--- a/src/main/java/com/oracle/tr/config/config.properties
+++ b/src/main/java/com/oracle/tr/config/config.properties
@@ -1,5 +1,5 @@
 #Mon Mar 20 09:11:29 IST 2017
-browser=firefox
+browser=chrome
 password=password
 url=http\://automationpractice.com/index.php
 userName=Test
