--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>3.0.1</version>
+    <version>3.3.1</version>
 </dependency>
 
 
@@ -47,6 +47,11 @@
     <version>3.15</version>
 </dependency>
 
+<dependency>
+        <groupId>com.uttesh</groupId>
+        <artifactId>pdfngreport</artifactId>
+        <version>2.1.3</version>
+</dependency>
 
 
 </dependencies>
