--- a/src/main/java/com/oracle/tr/config/OR.properties
+++ b/src/main/java/com/oracle/tr/config/OR.properties
@@ -1,5 +1,4 @@
-
-browser=chrome
+browser=firefox
 #url=http://automationpractice.com/index.php
 url=https://www.tirerack.com/content/tirerack/desktop/en/homepage.html
 userName=
