--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 <dependencies>
 
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
@@ -73,15 +72,14 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-
-					<configuration>
+					<!-- <configuration>
 						<systemPropertyVariables>
 							<userName>${DuserName}</userName>
 							<password>${Dpassword}</password>
 							<url>${Durl}</url>
 							<browser>${Dbrowser}</browser>
 						</systemPropertyVariables>
-					</configuration>
+					</configuration> -->
 					<suiteXmlFiles>
 						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 
